People imagine that programmers don’t like to talk because they prefer machines to people. This is not completely true. Programmers don’t talk because they must not be interrupted. This inability to be interrupted leads to a life that is strangely asynchronous with the one lived by other human beings. It’s better to send email than to call a programmer on the phone. It’s better to leave a note on the chair than to expect the programmer to come to a meeting. This is because the programmer must work in mind-time but the phone rings in real time. Similarly, meetings are supposed to take place in real time. It’s not just ego that prevents programmers from working in groups— it’s the synchrony problem. To synchronize with other people (or their representation in telephones, buzzers, and doorbells) can only mean interrupting the thought train. Interruptions mean certain bugs. You must not get off the train.     This closeness to the machine and living on asynchronous time can lead to a lifestyle that seems to be out of step with the rest of us. Getting closer to the machine means midnight dinners of Diet Coke. It means unwashed clothes and bare feet on the desk. It means anxious rides through mind-time that have nothing to do with the clock. To work on things used only by machines or other programmers— that’s the key. Programs and machines don’t care how you live. They don’t care when you live. You can stay, come, go, sleep, or not. At the end of the project looms a deadline, the terrible place where you must get off the train. But in between, for years at a stretch, you are free: free from the obligations of time.

--- a/server/front_end/static/stylesheet.css
+++ b/server/front_end/static/stylesheet.css
@@ -53,11 +53,13 @@ body.light p {
 }
 
 body.dark .package {
-    border: 5px solid #2196F3
+    border: 5px solid #2196F3;
+    border-radius: 2%
 }
 
 body.light .package {
-    border: 5px solid #767D92
+    border: 5px solid #767D92;
+    border-radius: 2%;
 }
 
 body.light h1 {
